--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,14 @@
 buildscript {
     repositories {
         jcenter()
+        //fix from https://stackoverflow.com/questions/44546849/unsupported-method-baseconfig-getapplicationidsuffix
+        maven {
+            url 'https://maven.google.com'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
